--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             width: 50px;
             height: 50px;
             border-radius: 5px;
-            background-color: blueviolet;
+            background-color: rgb(94, 21, 163);
         }
 
         .tombol-1 {
@@ -44,7 +44,7 @@
 <body>
 
     <h1>Drag and drop-zone</h1>
-    <p>Ini sepertinya lebih cocok ke draf file juga tapi belum bisa drag drop elemetn dan berpindah otomatis</p>
+    <p>Ini sepertinya lebih cocok ke draf file juga tapi belum bisa drag drop elemetn dan berpindah otomatis. semoga bisa membantu</p>
     <ul>
         <li>allows you to drag and drop any element</li>
         <li>commonly used to allow dragging in files for update</li>
