--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
 
-    <h1>Drag and drop-zone</h1>
+    <h1>Drag and drop zone element</h1>
     <p>Ini sepertinya lebih cocok ke draf file juga tapi belum bisa drag drop elemetn dan berpindah otomatis. semoga bisa membantu</p>
     <ul>
         <li>allows you to drag and drop any element</li>
