--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
 
         }
 
+        .btn-see {
+            background-color: rgb(216, 108, 175);
+            border-radius: 12px;
+            border: 4px solid palevioletred;
+            padding: 5px 10px;
+            color: #fff;
+            font-weight: bold;
+
+        }
+
     </style>
 </head>
 <body>
@@ -63,6 +73,10 @@
 
     <section>
         <a href="index2.html" class="tombol-1">Lihat drag and drop lain</a>
+    </section>
+
+    <section>
+        <a href="mext.html" class="btn-see">Lihat drag and drop lain</a>
     </section>
 
     <script>
